--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user_profile) do |f| %>
+<%= form_for @user_profile,:html => { :multipart => true } do |f| %>
 
 <%= f.label :first_name %>
 <%= f.text_field :first_name %> <br>
@@ -30,6 +30,13 @@
 
 <%= f.label :experience %>
 <%= f.text_field :experience %><br>
+
+<%= image_tag(@avatarsrc) %>
+
+<%= f.label "Profile Picture" %>
+  <%= f.file_field :avatar %>
+
+<br>
 <% if @user_profile.errors.any? %>
 <div style="color:red" >
 <hr>
