--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -1,6 +1,8 @@
 <h2>user profile</h2>
+
 <table>
-<tr><td>Id: </td><td><%= @user_profile.id %></td></tr>	
+<tr><td>Profile Pic: </td><td><%= image_tag(@avatarsrc) %></td></tr>	
+<tr><td>Id: </td><td><%= @user_profile.id %></td></tr>
 <tr><td>First Name: </td><td><%= @user_profile.first_name %></td></tr>
 <tr><td>Last Name: </td><td><%= @user_profile.last_name %></td>	</tr>
 <tr><td>Gender: </td><td><%= @user_profile.gender %></td>	</tr>
