--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>ProAttorney</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<%= render 'layouts/header' %>
-<div class="wrapper">
-	<%= yield %>
-	<%= render 'layouts/sidebar' %>
+	<head>
+ 
+  	<meta charset="UTF-8">
+  	<title>ProAttorney</title>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- Bootstrap 3.3.4 -->
+    <link href="/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <!-- Font Awesome Icons -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!-- Ionicons -->
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+    <!-- Theme style -->
+    <link href="/AdminLTE.min.css" rel="stylesheet" type="text/css" />
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
+         folder instead of downloading all of them to reduce the load. -->
+    <link href="/_all-skins.min.css" rel="stylesheet" type="text/css" />
+  	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  	<%= csrf_meta_tags %>
+	</head>
 
-	<%= render 'layouts/footer' %>
+	<body class="skin-blue sidebar-mini">
+		<%= render 'layouts/header' %>
+		<div class="wrapper">
+			
+				
+<div class="content-wrapper">
+	<section class="content-header">
+
+				<%= yield %>
+
+	</section>
 </div>
-</body>
+				<%= render 'layouts/sidebar' %>
+        
+				<%= render 'layouts/footer' %>
+			
+		</div>
+	</body>
+  
 </html>
