--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -1,51 +1,49 @@
 <%= form_for @user_profile,:html => { :multipart => true } do |f| %>
 
-<%= f.label :first_name %>
-<%= f.text_field :first_name %> <br>
+ <% if @user_profile.errors.any? %>
+    <div style="color:red" >
+    <hr>Validation Errors<br>
+    <% @user_profile.errors.full_messages.each do |message| %>
+      <li>*<%= message %></li>
+    <% end %>
+    </div>
+ <% end %>
 
-<%= f.label :last_name %>
-<%= f.text_field :last_name %> <br>
+ <%= f.label :first_name %>
+ <%= f.text_field :first_name %> <br>
 
-<%= f.label :gender %>
+ <%= f.label :last_name %>
+ <%= f.text_field :last_name %> <br>
 
-<%= f.radio_button :gender,"Male" ,checked: (@user_profile.gender == "Male" || @user_profile.gender == nil) %>Male
-<%= f.radio_button :gender,"Female" ,checked: (@user_profile.gender == "Female")%>Female<br>
+ <%= f.label :gender %>
+
+ <%= f.radio_button :gender,"Male" ,checked: male_or_new? %>Male
+ <%= f.radio_button :gender,"Female" ,checked: female? %>Female<br>
 
 
-<%= f.label :mobile_no %>
-<%= f.text_field :mobile_no %><br>
+ <%= f.label :mobile_no %>
+ <%= f.text_field :mobile_no %><br>
 
 
-<%= f.label :address %>
-<%= f.text_area :address%><br><br>
+ <%= f.label :address %>
+ <%= f.text_area :address%><br><br>
 
-<%= f.label :city %>
-<%= f.text_field :city %><br>
+ <%= f.label :city %>
+ <%= f.text_field :city %><br>
 
-<%= f.label :pincode %>
-<%= f.number_field :pincode %><br>
+ <%= f.label :pincode %>
+ <%= f.number_field :pincode %><br>
 
-<%= f.label :qualification %>
-<%= f.text_field :qualification %><br>
+ <%= f.label :qualification %>
+ <%= f.text_field :qualification %><br>
 
-<%= f.label :experience %>
-<%= f.text_field :experience %><br>
+ <%= f.label :experience %>
+ <%= f.text_field :experience %><br>
 
-<%= image_tag(@avatarsrc) %>
+ <%= image_tag(@avatarsrc) %>
 
-<%= f.label "Profile Picture" %>
-  <%= f.file_field :avatar %>
+ <%= f.label "Profile Picture" %>
+ <%= f.file_field :avatar %>
 
-<br>
-<% if @user_profile.errors.any? %>
-<div style="color:red" >
-<hr>
-	Validation Errors<br>
-	<% @user_profile.errors.full_messages.each do |message| %>
-        <li>*<%= message %></li>
-      <% end %>
-</div>
-<% end %>
-
-<%=f.submit %>
-<% end %>
+ <%=f.submit %>
+ <% end %>
