--- a/app/assets/stylesheets/user_profile.scss
+++ b/app/assets/stylesheets/user_profile.scss
@@ -1,19 +1,31 @@
 // Place all the styles related to the UserProfile controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.current-position {
+  font-size: 18px;
+  color: #777;
+  line-height: 20px;
+  margin-bottom: 14px
+}
+
+.icon-location {
+  background-position: 0px -97px;
+}
+
 .field_with_errors {
   padding: 2px;
-  background-color: red;
+  background-color: #ffcccc;
   display: table;
 }
 
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
+  
+  border: 1px solid red;
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
+  background-color: #ffcccc;
 
   h2 {
     text-align: left;
@@ -22,8 +34,8 @@
     font-size: 12px;
     margin: -7px;
     margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff;
+    background-color: #ffcccc;
+    color: #ffcccc;
   }
 
   ul li {
