--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -1,12 +1,17 @@
 <h1>User Profiles</h1>
-<%= link_to "New User", new_user_profile_path %>
-<table class="table-striped table-bordered table-hover">
+<div align="right">
+	<%= link_to edit_user_profile_path(@user_profile), class: "btn btn-primary" do %>
+			Register Today
+			<%end%>
+		</div>
+	
+<table class="table table-striped table-hover">
 	<tr>
-		<th>Id</th> <th>First name</th> <th>Last Name</th> <th>Actions</th>
+		 <th>First name</th> <th>Last Name</th> <th>Actions</th>
 	</tr>
 	<% @user_profile.each do |up|  %>
 	<tr>
-		<td><%= up.id %></td>
+		
 		<td><%= up.first_name %></td>
 		<td><%= up.last_name %></td>
 		<td>
