--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -1,26 +1,24 @@
 <h1>Cases</h1>
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Client_id</th>
-      <th>Advocate_id</th>
-      <th>Case Title</th>
-      <th>location</th>
-      <th>status</th>
-      <th colspan="3"></th>
+      <th>Title</th>
+      <th>Location</th>
+      <th>Status</th>
+      <th colspan="1"></th>
   </thead>
-
+   </tr>
   <tbody>
     <% @cases.each do |case1| %>
       <tr>
-          <td><%=case1.client_id %></td>
-          <td><%= case1.advocate_id %></td>
           <td><%= case1.case_title %></td>
           <td><%= case1.location%></td>
           <td><%=case1.status%></td>
-          <td><%= link_to 'Show', case_path(case1)%></td>
-          <td><%= link_to 'Edit', edit_case_path(case1)%></td>
-          <td><%= link_to 'Destroy', case1, method: :delete, data: { confirm: 'Are you sure?' }%></td>
+          <td><%= link_to case_path(case1) do%><%= image_tag "detail.png", size: "20x40" ,class: "some class here",alt: "show" %>
+<% end %><td>
+          <td><%= link_to edit_case_path(case1) do%><%= image_tag "edit.png", size: "20x40" ,class: "some class here",alt: "Edit" %><%end%></td>
+
+          <td><%= link_to case1, method: :delete, data: { confirm: 'Are you sure?' } do %><%= image_tag "del.png", size: "20x40" ,class: "some class here",alt: "Edit" %><%end%></td>
         
       </tr>
      <% end %>
