--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -1,33 +1,40 @@
-<%=link_to 'Back', cases_path %>
-<table>
+<div class= "col-md-8">
+  <h1>Case Detail</h1>
+<table class="table table-bordered table-hover">
     <tr>
-	    <td>Advocate  id</td> <td><%=@case.advocate_id%>
-	</tr>
-    <tr>
-	   <td>Client_id</td> <td><%=@case.client_id%>
+      <td>Advocate id</td>
+      <td><%=@case.advocate_id%></td>
     </tr>
-
     <tr>
-	   <td>Case Title</td> <td><%=@case.case_title%>
+       <td>Client d</td>
+       <td><%=@case.client_id%></td>
     </tr>
-
     <tr>
-	  <td>Detail</td> <td><%=@case.case_detail%>
-	</tr>
+       <td>Case Title</td>
+       <td><%=@case.case_title%></td>
+    </tr>
     <tr>
-	   <td>Location</td> <td><%=@case.location%>
-	</tr>
+	     <td>Detail</td> 
+       <td><%=@case.case_detail%></td>
+	  </tr>
+    <tr>
+	     <td>Location</td> 
+       <td><%=@case.location%></td>
+	 </tr>
    <tr>
-	   <td>staus</td> <td><%=@case.status%>
+	     <td>staus</td> <td><%=@case.status%></td>
    </tr>
 
- <tr>
- 	<td>Documents</td>
- 	<% docs=""
+   <tr>
+ 	    <td>Documents</td>
+ 	    <% docs=""
        @case.documents.each do |doc|
         docs+="  #{doc.doc_file_name}"
        end %>
-    <td><%=docs%>
-   </td>
- </tr>
+      <td><%=docs%></td>
+    </tr>
 </table>
+
+<%=link_to 'Back', cases_path,class: "btn btn-primary" %>
+</div>
+
