--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -1,9 +1,11 @@
 <h2>user profile</h2>
-<%= rating_for @feedback,"ratings",:disable_after_rate => true, :enable_half => true,
-    :half_show => true %>
 <table>
-<tr><td>Ratings:</td>
-<td>  <%= imdb_style_rating_for @feedback, current_user, "ratings" %></td>
+<tr><td>Give your Ratings:</td><td>
+<%= rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true,
+    :half_show => true %>
+</td></tr>
+<tr><td>Average Ratings:</td>
+<td><%= rating_for @user_profile, "ratings", disabled: true, imdb_avg: true %> </td>
 </tr>
 <tr><td>Profile Pic: </td><td><%= image_tag(@avatarsrc) %></td></tr>	
 <tr><td>Id: </td><td><%= @user_profile.id %></td></tr>
@@ -19,4 +21,3 @@
 </table>
 
 <%= link_to "Edit",edit_user_profile_path(@user_profile) %>
-
