--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -1,43 +1,46 @@
 <div class="row">
-	<div class="col-md-8">
+	<div class="col-md-8"><!--start box 1 -->
 		<div class = "box box-primary">
 			<div class = "box-header with-border">Profile</div>
 				<p>
 				<div class="row">
-					<div class= "col-md-4">
-						<%= image_tag (@avatarsrc), class: "img-circle", height: "236", width: "236" %>
-					</div>
-						<div class= "col-md-7 pull-right">
-					<h2 class="user-card-name"><%= @user_profile.first_name + " " + @user_profile.last_name %></h2>
-					<div class="current-position"><i class="fa fa-fw fa-mortar-board"></i>Advocate</div>
-					<br>
-					<p><br><br>
-					<b><i><u>Experience: </u></i></b><br><br><p><%= @user_profile.experience %></p></p>
-					</div>
+					<div class= "col-md-4"><!--start inner box 1 -->
+						<% if @user_profile.avatar.exists? %>
+							<%= image_tag(@user_profile.avatar.url, class: "img-circle", height: "236", width: "236") %>
+						<% else %> 
+							<%= image_tag(@avatarsrc, class: "img-circle", height: "236", width: "236") %>
+						<% end %>
+					</div><!--end inner box 1 -->
+					<div class= "col-md-7 pull-right"><!--start inner box 2 -->
+						<h2 class="user-card-name"><%= @user_profile.first_name + " " + @user_profile.last_name %></h2>
+						<div class="current-position"><i class="fa fa-fw fa-mortar-board"></i>Advocate</div>
+						<br>
+						<p><br><br>
+						<b><u>Experience: </u></b><br><br><p><%= @user_profile.experience %></p></p>
+					</div><!--end inner box 2 -->
 				</div>
 		</div>
-	</div>
+	</div><!--end box 1 -->
 
-	
-	<div class="col-md-4">
+	<div class="col-md-4"><!--start box 2 -->
 		<div class = "box box-primary">
 			<div class = "box-header with-border">Address</div>
-		<br>
-		&nbsp;&nbsp;&nbsp;<i class="fa fa-fw fa-male"></i>
-		<b>Gender</b>&nbsp;&nbsp;<%= @user_profile.gender %><br><br>
-		&nbsp;&nbsp;&nbsp;<i class="fa fa-fw fa-mobile-phone"></i>
-		<b>Contact</b>&nbsp;&nbsp;<%= @user_profile.mobile_no %><br><br>
-		&nbsp;&nbsp;<i class="fa fa-fw fa-map-marker"></i>
-		<b>Address</b><br>&nbsp;&nbsp;&nbsp;<%= @user_profile.address %>
-		&nbsp;&nbsp;&nbsp;<%= @user_profile.city %> -	
-		<%= @user_profile.pincode %>
-		</p>
-		<br>
+			<br>
+			&nbsp;&nbsp;&nbsp;<i class="fa fa-fw fa-male"></i>
+			<b>Gender:</b>&nbsp;&nbsp;<%= @user_profile.gender %><br><br>
+			&nbsp;&nbsp;&nbsp;<i class="fa fa-fw fa-mobile-phone"></i>
+			<b>Contact:</b>&nbsp;&nbsp;<%= @user_profile.mobile_no %><br><br>
+			&nbsp;&nbsp;<i class="fa fa-fw fa-map-marker"></i>
+			<b>Address:</b><br><br>&nbsp;&nbsp;&nbsp;<%= @user_profile.address %><br>
+			&nbsp;&nbsp;&nbsp;<%= @user_profile.city %> -	
+			<%= @user_profile.pincode %>
+			</p>
+			<br>
 			&nbsp;&nbsp;
 			<%= link_to edit_user_profile_path(@user_profile), class: "btn btn-primary" do %>
 			<i class="fa fa-fw fa-edit"></i>
 			<%end%>
-		<br>
-	</div>
-</div>
+			<br>
+		</div>
+	</div><!--end box 2 -->
 </div>
