complete flow of registration

--- a/app/views/users/signin.html.erb
+++ b/app/views/users/signin.html.erb
@@ -1,1 +1,3 @@
-<h1>Welcome admin</h1>
+<h1>please conforme your ACCOUNT from this link </h1>
+
+<a href="https://mail.google.com">PLEASE ENTER FOR CONFORMATION</a>
