Layout Design of login and signup page

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="main-sidebar">
+e<aside class="main-sidebar">
 <section class="sidebar">
           <!-- Sidebar user panel -->
           <div class="user-panel">
