#8/#9 - Set layout for devise and added logic for role wise signin/signup

--- a/app/views/users/signin.html.erb
+++ b/app/views/users/signin.html.erb
@@ -1,1 +1,3 @@
-<h1>Welcome admin</h1>
+ <h1>PLEASE CONFORME ACCOUNT FROM THIS LINK </h1>
+
+<a href="https://mail.google.com">PLEASE ENTER FOR CONFORMATION</a>
