--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Resend confirmation instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+<div class="alert alert-info">
   <%= devise_error_messages! %>
+</div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="register-box">
+  <div class="register-logo">
+    <b>Pro</b>ATTORNEY
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+  <div class="register-box-body">
+    <p class="login-box-msg">Resend confirmation instructions</p>
+    <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+     <div class="form-group has-feedback">
+       <%= f.email_field :email, autofocus: true,placeholder: "Email",class: "form-control" %>
+       <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+     </div>
+    <div class="actions">
+      <%= f.submit "Resend confirmation instructions",class: "btn btn-primary btn-block btn-flat" %>
+    </div>
+    <% end %>
+    <%= render "devise/shared/links" %>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
