--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Resend unlock instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+<div class="alert alert-info">
   <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+</div>
+<div class="register-box">
+  <div class="register-logo">
+    <b>Pro</b>ATTORNEY
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
+  <div class="register-box-body">
+    <p class="login-box-msg">Resend unlock instructions</p>
+    <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+   <div class="form-group has-feedback">
+     <%= f.email_field :email, autofocus: true,placeholder: "Email",class: "form-control" %>
+     <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+   </div>
+   <div class="actions">
+    <%= f.submit "Resend unlock instructions",class: "btn btn-primary btn-block btn-flat" %>
+   </div>
+   <% end %>
+   <%= render "devise/shared/links" %>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
