--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -19,14 +19,15 @@
 						<p><br><br>
 						<b><u>Experience: </u></b><br><br><p><%= @user_profile.experience %></p></p>
 						<table>
-<tr><td>Give your Ratings:</td><td>
-<%= rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true,
-    :half_show => true %>
-</td></tr>
+							<tr><td>Give your Ratings:</td>
+							<td><%= rating_for @user_profile,"ratings",:disable_after_rate => true,
+																										 :enable_half => true,
+   																									 :half_show => true %>
+							</td></tr>
 <tr><td>Average Ratings:</td>
 <td><%= rating_for @user_profile, "ratings", disabled: true, imdb_avg: true %> </td>
 </tr>
-</table>
+					</table>
 					</div><!--end inner box 2 -->
 				</div>
 		</div>
