--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -47,17 +47,17 @@
         
         <div class = "col-md-12">
           <div class = "form-group">
-            <%= f.label :Location %>
+            <%= f.label :location %>
             <%= f.text_field :location,class: "form-control",placeholder: "Enter Case Location" %>
           </div> 
   
           <div class = "form-group">
-            <%= f.label :Status %>
+            <%= f.label :status %>
             <%= f.text_field :status ,class: "form-control",placeholder: "Enter status" %></td>
           </div>
     
           <div class = "form-group">
-            <%= f.label :Documents_Atteched %>    
+            <%= f.label :documents_atteched %>    
             <% @documents.each do |document| %>
               <%= document.doc_file_name %>
               <%= link_to "Delete", document_cases_path(document) ,method: :delete, data: { confirm: 'Are you sure?' }  %><br>
@@ -65,7 +65,7 @@
           </div>
 
           <div class = "form-group">
-            <%= f.label :Document %>
+            <%= f.label :document %>
             <%= file_field_tag "document[]", type: :file, multiple: true %>
           </div>
         </div>
