kb-isssue-15.dev

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="/assets/user3-128x128.jpg" class="img-circle" alt="User Image" />
+                            <!-- <img src="/assets/user3-128x128.jpg" class="img-circle" alt="User Image" /> -->
                           </div>
                           <h4>
                             AdminLTE Design Team
@@ -52,7 +52,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="/assets/user4-128x128.jpg" class="img-circle" alt="User Image" />
+                            <!-- <img src="/assets/user4-128x128.jpg" class="img-circle" alt="User Image" /> -->
                           </div>
                           <h4>
                             Developers
@@ -64,7 +64,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="/user3-128x128.jpg" class="img-circle" alt="User Image" />
+                            <!-- <img src="/user3-128x128.jpg" class="img-circle" alt="User Image" /> -->
                           </div>
                           <h4>
                             Sales Department
@@ -76,7 +76,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="user4-128x128.jpg" class="img-circle" alt="User Image" />
+                            <!-- <img src="user4-128x128.jpg" class="img-circle" alt="User Image" /> -->
                           </div>
                           <h4>
                             Reviewers
