--- a/app/views/layouts/registration_layout.html.erb
+++ b/app/views/layouts/registration_layout.html.erb
@@ -12,8 +12,7 @@
     <!-- Theme style -->
     <%= stylesheet_link_tag "AdminLTE.min.css" %>
     <!-- iCheck -->
-    <%= stylesheet_link_tag "blue.css" %>
-
+   <!-- <%= stylesheet_link_tag "skin-blue.css" %>-->
   </head>
 <body class="register-page">
    <%= yield %>
