--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -11,7 +11,7 @@
     <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
      <div class="form-group has-feedback">
        <%= f.email_field :email, autofocus: true,placeholder: "Email",class: "form-control" %>
-       <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+       <!-- <span class="glyphicon glyphicon-envelope form-control-feedback"></span> -->
      </div>
     <div class="actions">
       <%= f.submit "Resend confirmation instructions",class: "btn btn-primary btn-block btn-flat" %>
