--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -10,7 +10,7 @@
     <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
    <div class="form-group has-feedback">
      <%= f.email_field :email, autofocus: true,placeholder: "Email",class: "form-control" %>
-     <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+     <!-- <span class="glyphicon glyphicon-envelope form-control-feedback"></span> -->
    </div>
    <div class="actions">
     <%= f.submit "Resend unlock instructions",class: "btn btn-primary btn-block btn-flat" %>
