change in partial file

--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -18,7 +18,7 @@
     </tr>
     <tr>
  	    <td>Documents</td>
- 	    <%= render partial: "case_documents.html.erb" %>
+ 	    <%= render partial: "case_documents" %>
     </tr>
   </table>
 
