--- a/app/views/cases/_search_form.html.erb
+++ b/app/views/cases/_search_form.html.erb
@@ -1,4 +1,9 @@
-<%= form_tag('/cases')  do %>
-	<%= search_field_tag 'search', 'search your case', class: 'special_input' %>
-	<%= submit_tag 'search_case' %>
+<%= form_tag('/cases/search_case')  do %>
+	<div class = "form-group">
+		<div class = "input-group">
+			<%= text_field_tag 'search', nil, placeholder: "search",title: "Enter to search", class: "btn btn-flat" do %>
+				<i class="fa fa-search"></i>
+			<% end %>
+		</div>
+	</div>
 <% end %>
