--- a/app/views/cases/_search_form.html.erb
+++ b/app/views/cases/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag('/cases/search_case')  do %>
+<%= form_tag(cases_path, method: :get)  do %>
 	<div class = "form-group">
 		<div class = "input-group">
 			<%= text_field_tag 'search', nil, placeholder: "search",title: "Enter to search", class: "btn btn-flat" do %>
