--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -50,6 +50,7 @@
 			<%= link_to edit_user_profile_path(@user_profile), class: "btn btn-primary" do %>
 			<i class="fa fa-fw fa-edit"></i>
 			<%end%>
+			  <%= link_to 'Back',:back, class: "btn btn-primary" %>
 			<br>
 		</div>
 	</div><!--end box 2 -->
