Display cases and some changes in theme -- WIP

--- a/app/views/cases/_search_form.html.erb
+++ b/app/views/cases/_search_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag(cases_path, method: :get)  do %>
 	<div class = "form-group">
 		<div class = "input-group">
-			<%= text_field_tag 'search', nil, placeholder: "search",title: "Enter to search", class: "btn btn-flat" do %>
+			<%= text_field_tag 'search', nil, placeholder: "search", title: "Enter to search", class: "btn btn-sm btn-default" do %>
 				<i class="fa fa-search"></i>
 			<% end %>
 		</div>
