--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -1,11 +1,19 @@
 <% @cases.each do |case1| %>
   <tr>
     <td><%= case1.case_title %></td>
+    <td><%= case1.case_type.case_type %></td>
+    <td><%= case1.case_detail %></td>
     <td><%= case1.location%></td>
-    <td><%=case1.status%></td>
-    <td><%= link_to case_path(case1) do%><%= image_tag "detail.png", size: "20x40" ,class: "some class here",alt: "show" %>
+    <td><%= case1.case_type.amount %></td>
+    <td><%= case1.status%></td>
+    <td><%= link_to case_path(case1) do%>
+        <%= image_tag "detail.png", size: "20x40" ,class: "some class here",alt: "show" %>
     <% end %><td>
-    <td><%= link_to edit_case_path(case1) do%><%= image_tag "edit.png", size: "20x40" ,class: "some class here",alt: "Edit" %><%end%></td>
-    <td><%= link_to case1, method: :delete, data: { confirm: 'Are you sure?' } do %><%= image_tag "del.png", size: "20x40" ,class: "some class here",alt: "Edit" %><%end%></td>
+    <td><%= link_to edit_case_path(case1) do%>
+        <%= image_tag "edit.png", size: "20x40" ,class: "some class here",alt: "Edit" %>
+    <%end%></td>
+    <td><%= link_to case1, method: :delete, data: { confirm: 'Are you sure?' } do %>
+        <%= image_tag "del.png", size: "20x40" ,class: "some class here",alt: "Edit" %>
+    <%end%></td>
     </tr>
 <% end %>
