--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Cases</h1>
+<h1>Cases' Details</h1>
+<%= current_user.user_profile.first_name %>
 <%= render partial: "search_form" %>
   <% if @cases.blank? %>
     <%= flash[:notice] %>
@@ -7,13 +8,19 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Type</th>
+      <th>Description</th>
       <th>Location</th>
+      <th>Amount</th>.
       <th>Status</th>
-      <th colspan="1"></th>
+      <th colspan="3">Actions</th>
+
     </tr>
   </thead>
   <tbody>
     <%= render partial: "cases" %>
   </tbody>
-</table>
+  </table>
+   <%= will_paginate @cases, renderer: BootstrapPagination::Rails, class: "pull-right"%>
 <%= link_to 'New Case', new_case_path %>
+<% end %>
