--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,40 +1,35 @@
-e<aside class="main-sidebar">
+<aside class="main-sidebar">
 <section class="sidebar">
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
+              <% if current_user.user_profile.avatar.exists? %>
+              <%= image_tag(current_user.user_profile.avatar.url(:medium), class: "img-circle") %>
+            <% else %> 
+              <%= image_tag(@avatarsrc, class: "img-circle", height: "80px", width: "80px") %>
+            <% end %>
             </div>
             <div class="pull-left info">
-              <p>Alexander Pierce</p>
+              <p><%= current_user.user_profile.first_name + " " + current_user.user_profile.last_name %></p>
               <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
           </div>
-          <!-- search form -->
-          <form action="#" method="get" class="sidebar-form">
-            <div class="input-group">
-              <input type="text" name="q" class="form-control" placeholder="Search..." />
-              <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i></button>
-              </span>
-            </div>
-          </form>
-          <!-- /.search form -->
+          
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
-            <li class="header">MAIN NAVIGATION</li>
+            
             <li class="treeview">
               <a href="#">
-                <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-dashboard"></i> <span>Dashboard</span> 
               </a>
             </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-files-o"></i>
-                <span>Layout Options</span>
-                <span class="label label-primary pull-right">4</span>
-              </a>
+             
+             <li class="treeview">
+              <%=link_to user_profile_path(current_user)  do %>
+              <i class="fa fa-user"></i> <span>Profile</span>
+               <% end %>
             </li>
+            
             <li class="treeview">
               <a href="#">
                 <i class="fa fa-pie-chart"></i>
