--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -35,7 +35,7 @@
             </div>
 
             <div class = "form-group">
-              <%= f.label :mobile_no %>
+              <%= f.label :contact %>
               <%= f.text_field :mobile_no, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter mobile number" %>
             </div>
 
@@ -46,13 +46,15 @@
                 <%= image_tag(@user_profile.avatar.url, height: "85px", width: "85px") %>
                 <% else %> 
                 <%= image_tag('default.jpg', height: "85px", width: "85px") %>
-                <% end %>  
+                <% end %>
+                <br><br>
                 <%= f.file_field :avatar %><p class="help-block">File should be less than 5Mb.</p>
                 </div>
             </div>
           </div>
         </div>
       </div> <!--end box 1 -->
+
     </div>
     <div class="col-md-6">
       <div class="box box-primary"><!--start box 2 -->
@@ -82,6 +84,7 @@
             </div>
           </div>
         </div>
+
       </div><!--end box 2 -->
       <%=f.submit class: "btn btn-primary" %>
     </div>
