Unnecessary partial file is removed and flash msg file is added and other small changes

--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -1,9 +1,7 @@
 <h1>Cases</h1>
 <%= render partial: "search_form" %>
-  <% if @cases.blank? %>
-    <%= flash[:notice] %>
-  <% else %>
-  <table class="table table-striped">
+  <% if @cases.present? %>
+    <table class="table table-striped">
   <thead>
     <tr>
       <th>Title</th>
@@ -17,3 +15,6 @@
   </tbody>
 </table>
 <%= link_to 'New Case', new_case_path %>
+  <% else %>
+  <p>No matching result found</p>
+<% end %>
