--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -18,7 +18,7 @@
     </tr>
     <tr>
  	    <td>Documents</td>
- 	    <%= render partial: "case_documents" %>
+ 	    <td><%= show_documents %></td>
     </tr>
   </table>
 
