--- a/app/views/admins/_users.html.erb
+++ b/app/views/admins/_users.html.erb
@@ -1,24 +1,25 @@
-<table class="table table-hover">
+<table class="table table-bordered table-hover dataTable">
 	<thead>
 		<tr>
 		 	<th>Id</th>
-		 	<th>Email</th>
 		 	<th>Name</th>
+		 	<th class="sorting_asc">Email</th>
 		 	<th>Actions</th>
 	 	</tr>
 	</thead>
 	<tbody>
-		<% @users.each do |user|%>
+		<% @users.each.with_index do |user,index|%>
 		  <tr>
-				<td><%= user.id %></td>
-				<td><%= user.email %></td>
+				<td><%= index+1 %></td>
 				<td>
 				<%=link_to user_profile_path(user.user_profile) do%>
-				<%= user.user_profile.first_name+" "+user.user_profile.last_name %>
+				<%= user.user_profile.first_name.capitalize+" "+user.user_profile.last_name.capitalize %>
 				<%end %>
 				</td>
+				<td><%= user.email %></td>
 				<td><%= link_to active?(user), update_user_path(user),method: :patch,title: "Activate/Deactivate this User" %></td>
 			</tr>
 		<% end %>
 	</tbody>
 </table>
+<%= will_paginate @users, renderer: BootstrapPagination::Rails,class: "pull-right"%>
