--- a/app/views/admins/view_cases.html.erb
+++ b/app/views/admins/view_cases.html.erb
@@ -10,14 +10,15 @@
 	</tr>
 </thead>
 <tbody>
-<% @cases.each do |c|%>
+<% @cases.each_with_index do |c,index|%>
 <tr>
-	<td><%= c.id %></td>
+	<td><%= index+1 %></td>
 	<td><%= link_to case_path(c) do%><%= c.case_title %><%end%></td>
-	<td><%= c.user.user_profile.first_name %> <%= c.user.user_profile.last_name %></td>
+	<td><%= c.user.user_profile.first_name.capitalize %> <%= c.user.user_profile.last_name.capitalize %></td>
 	<td><%= c.case_type.case_type %></td>
 	<td><%= link_to  active?(c),update_case_path(c),method: :patch %></td>
 </tr>
 <% end %>
 </tbody>
 </table>
+<%= will_paginate @cases, renderer: BootstrapPagination::Rails,class: "pull-right"%>
