--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -50,6 +50,23 @@ e<aside class="main-sidebar">
 
             <% end %>
 
+           <% if current_user.is_advocate? %>
+            
+            <li class="treeview">
+              <%=link_to  admins_view_advocates_path  do %>
+              <i class="fa fa-book"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
+               <% end %>
+            </li>
+
+
+            <li class="treeview">
+              <%=link_to  admins_view_advocates_path  do %>
+        <i class="fa fa-book"></i> <span>Purchased Cases</span> <i class="fa fa-angle-left pull-right"></i>
+               <% end %>
+            </li>
+          <% end %>
+
+
             <li class="treeview">
               <a href="#">
                 <i class="fa fa-pie-chart"></i>
