--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -1,5 +1,20 @@
 <%= form_for @user_profile, role: "form", html: { :multipart => true } do |f| %>
   <div class = "row">
+    <div class = "col-md-12">
+    <% if @user_profile.errors.any? %>
+      <div class = "alert alert-danger">
+       
+      Please enter valid data<br>
+      <% @user_profile.errors.full_messages.each do |message| %>
+      <ul><%= message %></ul>
+      <% end %>
+      
+      </div>
+    <% end %>
+    </div>
+  </div>
+
+  <div class = "row">
     <div class = "col-md-6">
       <div class = "box box-primary"><!--start box 2 -->
         <div class = "box-header with-border">
@@ -7,16 +22,7 @@
         </div>
         <div class = "box-body">
           <div class = "col-md-12">
-            <% if @user_profile.errors.any? %>
-              <div id="error_explanation">
-                <div style="color:red"> 
-                  Please enter valid data<br>
-                  <% @user_profile.errors.full_messages.each do |message| %>
-                  <ul>*<%= message %></ul>
-                  <% end %>
-                </div>
-              </div>
-            <% end %>
+            
 
             <div class = "form-group">
               <%= f.label :first_name %>
