flash file added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 		<div class="wrapper">
 			<div class="content-wrapper">
         <section class="content-header">
+          <%= render partial: 'shared/flash' %>
 				<%= yield %>
         </section>
         </div>
