--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Cases</h1>
-<table class="table table-striped">
+        <%= link_to 'Back',:back, class: "btn btn-primary pull-right" %>
+        <table class="table table-striped">
   <thead>
     <tr>
       <th>Title</th>
       <th>Location</th>
+      <th>Price</th>
       <th>Status</th>
       <th colspan="1"></th>
     </tr>
