flash and error messages

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,6 +7,9 @@ e<aside class="main-sidebar">
             </div>
             <div class="pull-left info">
               <p>Alexander Pierce</p>
+            </div>
+            <div class="pull-left info">
+              <p></p>
               <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
           </div>
@@ -34,6 +37,11 @@ e<aside class="main-sidebar">
                 <span>Layout Options</span>
                 <span class="label label-primary pull-right">4</span>
               </a>
+
+             <li class="treeview">
+              
+              <i class="fa fa-user"></i> <span>Profile</span>
+               
             </li>
             <li class="treeview">
               <a href="#">
