--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -206,6 +206,8 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                   <img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image" />
                   <span class="hidden-xs">Alexander Pierce</span>
+            &nbsp;&nbsp;
+                  <span class="hidden-xs"></span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
